kubernetes/apps/selfhosted/netbox/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  hostnames: ["netbox.hayden.moe"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbox-anubis
          port: 80
